src/objects/Individual.object
<CustomObject>
    <fields>
        <fullName>DF_ContactExternalId__c</fullName>
        <externalId>true</externalId>
        <label>DF_ContactExternalId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DF_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This one-to-one link on the DF Contact is required to minimise the changes required to existing integration queries. This was considered the solution that required minimal developer effort and most likely to be achievable within the tight timeframe.</description>
        <inlineHelpText>This one-to-one link on the DF Contact is required to minimise the changes required to existing integration queries. This was considered the solution that required minimal developer effort and most likely to be achievable within the tight timeframe.</inlineHelpText>
        <label>DF Contact</label>
        <referenceTo>DF_Contact__c</referenceTo>
        <relationshipLabel>Individuals</relationshipLabel>
        <relationshipName>Individuals_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DevTemp_LenExtId__c</fullName>
        <formula>LEN( DF_ContactExternalId__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DevTemp_LenExtId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Optin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Optin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Optin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone Optin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_Optout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Optout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_Optin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Optin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Social_Media_Optin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Social Media Optin</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>